# ocamlinterface

./: readme
_build/: log
eg1/: commands used  lib.c  olib.cmi  olib.ml  prog  prog.c  stdlib.ml
eg1/ocamlLib/: a.out  olib.cmo  olib.ml
eg2/: hello.cmi  hello.cmo  hello.cmx  hello.ml  hello.opt  hello_stubs.c
eg3/: commands  dune  eg.cmi  eg.cmo  eg.ml  lib.h  mylib.cma  prog  slib.cmi  slib.cmo  slib.ml  stdlib_stubs.c
eg3/_build/: log
eg4/: prog  readme
eg4/_build/: log
eg4/c_lib/: mylib.h
eg4/c_stub/: mystub.c
eg4/dump/_build/default/ml/: .merlin  eg.ml
eg4/dump/sample/_build/: .digest-db  .to-delete-in-source-tree  log
eg4/dump/sample/lib/: dune  lib.ml
eg4/dump/sample/sam/: dune
eg4/dump/src/: dune
eg4/ml/: eg.ml  header.cmi  header.cmo
eg4/ml/dump/: dune  eg.cmi  eg.cmo
eg4/ml/dump/_build/: .db  .digest-db  log
eg4/ml/dump/header/: header.ml
eg5/dump/: prog
eg5/dump/_build/: .db  .digest-db  .to-delete-in-source-tree  log
eg5/dump/ml/: eg.cmi  eg.cmo
eg5/dump/sample/_build/: .db
eg5/dump/sample/sam/: .merlin  sample.ml
eg5/src/: dune
eg5/src/_build/: log
eg5/src/libfoo/: dune  makefile  mylib.c
eg6/: read me
eg6/_build/: .db  .digest-db  log
eg6/_build/default/lib/: clibrary.cmxa  lib.c
eg6/lib/: clibrary.ml  dune  sec_lib.c
eg6/src/: dune  file.ml
eg7/: read me
eg7/_build/: .db  .digest-db  log
eg7/_build/default/lib/: .merlin  clibrary.cmxa  clibrary.ml
eg7/_build/default/src/: file.ml
eg7/lib/: dune
eg7/lib/cfiles/: clib.h  lib.c  sec_lib.c
eg7/src/: .merlin
(+26 files in other folders)
